# DataFrame_test_1_python

./: .gitignore  Middle Python Developer tech task .ipynb  README.md  pyproject.toml
app/: binary_files.py  df_processor.py  main.py  queries.py
